<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="sk.styk.martin.apkanalyzer.model.detail.ResourceData" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/ItemDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.appdetail.AppDetailActivity">

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_all_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/all_drawables_description"
                app:titleText="@string/all_drawables"
                app:valueText="@{data.drawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_different_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/different_drawables_description"
                app:titleText="@string/different_drawables"
                app:valueText="@{data.differentDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_png_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/png_drawables_description"
                app:titleText="@string/png_drawables"
                app:valueText="@{data.pngDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_nine_patch_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/nine_patch_drawables_description"
                app:titleText="@string/nine_patch_drawables"
                app:valueText="@{data.ninePatchDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_jpg_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/jpg_drawables_description"
                app:titleText="@string/jpg_drawables"
                app:valueText="@{data.jpgDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_gif_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/gif_drawables_description"
                app:titleText="@string/gif_drawables"
                app:valueText="@{data.gifDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_xml_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/xml_drawables_description"
                app:titleText="@string/xml_drawables"
                app:valueText="@{data.xmlDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_ldpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/ldpi_drawables_description"
                app:titleText="@string/ldpi_drawables"
                app:valueText="@{data.ldpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_mdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/mdpi_drawables_description"
                app:titleText="@string/mdpi_drawables"
                app:valueText="@{data.mdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_hdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/hdpi_drawables_description"
                app:titleText="@string/hdpi_drawables"
                app:valueText="@{data.hdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_xhdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/xhdpi_drawables_description"
                app:titleText="@string/xhdpi_drawables"
                app:valueText="@{data.xhdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_xxhdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/xxhdpi_drawables_description"
                app:titleText="@string/xxhdpi_drawables"
                app:valueText="@{data.xxhdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_xxxhdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/xxxhdpi_drawables_description"
                app:titleText="@string/xxxhdpi_drawables"
                app:valueText="@{data.xxxhdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_nodpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/nodpi_drawables_description"
                app:titleText="@string/nodpi_drawables"
                app:valueText="@{data.nodpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_tvdpi_drawables"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/tvdpi_drawables_description"
                app:titleText="@string/tvdpi_drawables"
                app:valueText="@{data.tvdpiDrawables}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_all_layouts"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/all_layouts_description"
                app:titleText="@string/all_layouts"
                app:valueText="@{data.layouts}" />

            <sk.styk.martin.apkanalyzer.ui.customview.DetailItemView
                android:id="@+id/item_different_layouts"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                app:descriptionText="@string/different_layouts_description"
                app:titleText="@string/different_layouts"
                app:valueText="@{data.differentLayouts}" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>